force-app/main/default/objects/Reva_Hostel_Room__c/Reva_Hostel_Room__c.object-meta.xml
<CustomObject>
    <description>Reva Hostel Room contains all the information about the hostel room which includes the hostel room information.</description>
    <label>REVA Hostel Room</label>
    <nameField>
        <label>REVA Hostel Room Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REVA Hostel Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>