force-app/main/default/objects/Reva_Hostel_Room__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <description>Block contains all the blocks of Boys and Girls hostel
Block A,B,C and D are for Boys and Block G1,G2,G3 and RBS are for Girls</description>
    <inlineHelpText>Boys Hostel Blocks - A, B, C, D
Girls Hostel Blocks - G1, G2, G3, RBS</inlineHelpText>
    <label>Block</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dormitory_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>G3</fullName>
            </value>
            <value>
                <fullName>RBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>