force-app/main/default/objects/Reva_Hostel_Room__c/fields/Dormitory_Type__c.field-meta.xml
<CustomField>
    <fullName>Dormitory_Type__c</fullName>
    <description>This field is used for type of Hostel like for Boys or Girls</description>
    <label>Dormitory Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boys</fullName>
            </value>
            <value>
                <fullName>Girls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>