force-app/main/default/objects/Reva_Hostel_Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>This field contains all the floors of Boys and Girls Hostel of each block</description>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Block__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GF</fullName>
                <label>Ground Floor</label>
            </value>
            <value>
                <fullName>FF</fullName>
                <label>First Floor</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>Second Floor</label>
            </value>
            <value>
                <fullName>TF</fullName>
                <label>Third Floor</label>
            </value>
            <value>
                <fullName>FRF</fullName>
                <label>Forth Floor</label>
            </value>
            <value>
                <fullName>FVF</fullName>
                <label>Fifth Floor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>