force-app/main/default/objects/Reva_Hostel_Room__c/fields/Is_Premium__c.field-meta.xml
<CustomField>
    <fullName>Is_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Premium</label>
    <type>Checkbox</type>
</CustomField>