force-app/main/default/objects/Reva_Hostel_Room__c/fields/Maximum_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Occupancy__c</fullName>
    <description>Maximum Occupancy contains all the sharing for Reva Boys Hostel and Reva Girls Hostel</description>
    <label>Maximum Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Block__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Single Sharing</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Sharing</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Sharing</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Sharing</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Sharing</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Sharing</label>
            </value>
            <value>
                <fullName>4ExtraSpace</fullName>
                <label>4 - Sharing Extra Space</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>