force-app/main/default/objects/Reva_Hostel_Room__c/fields/Occupied_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Occupancy__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Occupied Occupancy contains the total numbers of Students in the room</description>
    <label>Occupied Occupancy</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>