force-app/main/default/objects/Reva_Hostel_Room__c/fields/Room_Category__c.field-meta.xml
<CustomField>
    <fullName>Room_Category__c</fullName>
    <inlineHelpText>1st Engineering CS
1st Engineering Non-CS
1st Non-Engineering
Engineering CS
Engineering Non-CS
Non-Engineering
None - For Demo &amp; Staff rooms</inlineHelpText>
    <label>Room Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Eng CS</fullName>
            </value>
            <value>
                <fullName>1 Eng Non-CS</fullName>
            </value>
            <value>
                <fullName>1 Non-Eng</fullName>
            </value>
            <value>
                <fullName>Eng CS</fullName>
            </value>
            <value>
                <fullName>Eng Non-CS</fullName>
            </value>
            <value>
                <fullName>Non-Eng</fullName>
            </value>
            <value>
                <fullName>None - Demo/Staff</fullName>
            </value>
            <value>
                <fullName>1 Eng</fullName>
            </value>
            <value>
                <fullName>Demo/Staff</fullName>
            </value>
            <value>
                <fullName>2 Non-Eng</fullName>
            </value>
            <value>
                <fullName>2 Eng</fullName>
            </value>
            <value>
                <fullName>3 Non-Eng</fullName>
            </value>
            <value>
                <fullName>3 Eng</fullName>
            </value>
            <value>
                <fullName>4 Non-Eng</fullName>
            </value>
            <value>
                <fullName>4 Eng/PG</fullName>
            </value>
            <value>
                <fullName>4 Non-Eng/PG</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
            <value>
                <fullName>3-4 Non-Eng/PG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>