force-app/main/default/objects/Reva_Hostel_Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Non-Staff</fullName>
            </value>
            <value>
                <fullName>Demo Room</fullName>
            </value>
            <value>
                <fullName>Miscellaneous room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>