force-app/main/default/objects/Reva_Hostel_Room__c/fields/Vacant_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Occupancy__c</fullName>
    <formula>CASE(Maximum_Occupancy__c,
  &quot;1&quot;, 1,
  &quot;2&quot;, 2,
  &quot;3&quot;, 3, 
  &quot;4&quot;, 4,
  &quot;4ExtraSpace&quot;,4,
  &quot;6&quot;, 6,
  &quot;8&quot;, 8,0) -  Occupied_Occupancy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacant Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>