force-app/main/default/objects/Reva_Hostel_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dormitory_Type__c</columns>
    <columns>Block__c</columns>
    <columns>Floor__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Maximum_Occupancy__c</columns>
    <columns>Vacant_Occupancy__c</columns>
    <columns>Room_Category__c</columns>
    <columns>Is_Premium__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>